// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar renders correctly when value < 0 1`] = `
<DocumentFragment>
  .emotion-1 {
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 2px;
  background-color: #dce1eb;
}

.emotion-3 {
  border-radius: 2px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #4f0599;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 0%;
}

<div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="-250"
    class="emotion-0 emotion-1 emotion-2"
    role="progressbar"
  >
    <div
      class="emotion-3 emotion-4"
    />
  </div>
</DocumentFragment>
`;

exports[`ProgressBar renders correctly when value > 100 1`] = `
<DocumentFragment>
  .emotion-1 {
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 2px;
  background-color: #dce1eb;
}

.emotion-3 {
  border-radius: 2px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #4f0599;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 100%;
}

<div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="250"
    class="emotion-0 emotion-1 emotion-2"
    role="progressbar"
  >
    <div
      class="emotion-3 emotion-4"
    />
  </div>
</DocumentFragment>
`;

exports[`ProgressBar renders info 1`] = `
<DocumentFragment>
  .emotion-1 {
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 2px;
  background-color: #dce1eb;
}

.emotion-3 {
  border-radius: 2px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #3f6ed8;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 40%;
}

<div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="40"
    class="emotion-0 emotion-1 emotion-2"
    role="progressbar"
  >
    <div
      class="emotion-3 emotion-4"
    />
  </div>
</DocumentFragment>
`;

exports[`ProgressBar renders primary 1`] = `
<DocumentFragment>
  .emotion-1 {
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 2px;
  background-color: #dce1eb;
}

.emotion-3 {
  border-radius: 2px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #4f0599;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 40%;
}

<div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="40"
    class="emotion-0 emotion-1 emotion-2"
    role="progressbar"
  >
    <div
      class="emotion-3 emotion-4"
    />
  </div>
</DocumentFragment>
`;

exports[`ProgressBar renders progression 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.emotion-1 {
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 2px;
  background-color: #dce1eb;
}

.emotion-3 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      rgba(255, 255, 255, 0),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0.4),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0)
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
}

<div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="0"
    class="emotion-0 emotion-1 emotion-2"
    role="progressbar"
  >
    <div
      class="emotion-3 emotion-4"
    />
  </div>
</DocumentFragment>
`;

exports[`ProgressBar renders success 1`] = `
<DocumentFragment>
  .emotion-1 {
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 2px;
  background-color: #dce1eb;
}

.emotion-3 {
  border-radius: 2px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #45d6b5;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 40%;
}

<div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="40"
    class="emotion-0 emotion-1 emotion-2"
    role="progressbar"
  >
    <div
      class="emotion-3 emotion-4"
    />
  </div>
</DocumentFragment>
`;

exports[`ProgressBar renders warning 1`] = `
<DocumentFragment>
  .emotion-1 {
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 2px;
  background-color: #dce1eb;
}

.emotion-3 {
  border-radius: 2px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #ef5774;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 40%;
}

<div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="40"
    class="emotion-0 emotion-1 emotion-2"
    role="progressbar"
  >
    <div
      class="emotion-3 emotion-4"
    />
  </div>
</DocumentFragment>
`;

exports[`ProgressBar renders with different background 1`] = `
<DocumentFragment>
  .emotion-1 {
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 2px;
  background-color: yellow;
}

.emotion-3 {
  border-radius: 2px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #4f0599;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 40%;
}

<div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="40"
    class="emotion-0 emotion-1 emotion-2"
    role="progressbar"
  >
    <div
      class="emotion-3 emotion-4"
    />
  </div>
</DocumentFragment>
`;
